# panel-local-projection-py

./: .gitignore  README.md  pyproject.toml
examples/: replicate_vignette_rr.py
src/panel_local_projection/: __init__.py  core.py  datasets.py
src/panel_local_projection/data/: BVX_annual_auto.csv  empirical_MSV_auto.csv  empirical_RR_f4_lngdp_1980_yx.csv  empirical_RR_f4_lnunemp_1980_yx.csv  original_CS_f3.csv
tests/: test_panel_lp.py
